2010-02-02 Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Remove locks.  This seems to be causing a deadlock.
	I'm removing it so that other can test if not having the lock 
	makes a difference.

2010-01-31 03:27-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: New image.
	* Resources/ThemeImages/common_Nibble.tif: More windows
	like nibble for popup.

2010-01-31 02:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Add new category for rendering menu items in
	popups/pulldowns.
	* WinNSMenuItemCell.m: New category for drawing popups/pulldowns
	like buttons.  

2010-01-29 22:16-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added implementation of updateAllWindowsWithMenu:.
	* WinUXTheme.m: Added implementation of activate to order out
	main menu window when this theme is switched to.

2010-01-26 Riccardo Mottola

	* added WinTheme.png: theme icon
	* added resources for Radio and Switch buttons

2010-01-24 04:44-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinUXThemeInfo.plist: Added myself to the list of authors.

2010-01-24 04:14-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Reduce the scope of the lock to encompass only
	the lookup in processCommand:.

2010-01-24 04:06-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added locking mechanism to prevent concurrent update
	of menu from separate threads and to prevent processing of
	processCommand: messages until update of the menu is completed.

2010-01-24 03:09-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added function to delete the menu for the update
	delete_menu(...).

2010-01-23 18:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Code to roughly calculate the number of rows
	a menu can take in the worst case.

2010-01-21 15:34-EST Gregory John Casamento <greg.casamento@gmail.com>
